Added logout endpoint
